dev/local/envoy.debug.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      name: pot_listener
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.router
                route_config:
                  name: pot_route
                  virtual_hosts:
                    - name: pot_vhost
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/api/"
                          route:
                            cluster: webapi
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/identity/"
                          route:
                            cluster: identity
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/admin"
                          route:
                            cluster: website-admin-frontend
                            prefix_rewrite: ""
                        # admin backend not used when debugging locally
                        # - match:
                        #     prefix: "/admin/"
                        #   route:
                        #     cluster: website-admin-backend
                        #     prefix_rewrite: ""
                        - match:
                            safe_regex:
                              google_re2: {}
                              regex: ^/(health|user)$
                          route:
                            cluster: website-main-backend
                        - match:
                            prefix: "/"
                          route:
                            cluster: website-main-frontend
                access_log:
                  - name: envoy.access_loggers.file
                    filter:
                      not_health_check_filter: {}
                    config:
                      path: "/dev/stdout"
                      json_format:
                        time: "%START_TIME%"
                        protocol: "%PROTOCOL%"
                        duration: "%DURATION%"
                        request_method: "%REQ(:METHOD)%"
                        response_code: "%RESPONSE_CODE%"
                        request_host: "%REQ(HOST)%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        response_flags: "%RESPONSE_FLAGS%"
                        route_name: "%ROUTE_NAME%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                        upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"

  clusters:
    - name: webapi
      connect_timeout: 0.25s
      type: logical_dns
      hosts:
        - socket_address:
            address: host.docker.internal
            port_value: 4202
    - name: identity
      connect_timeout: 0.25s
      type: logical_dns
      hosts:
        - socket_address:
            address: host.docker.internal
            port_value: 5111
    - name: website-main-frontend
      connect_timeout: 0.25s
      type: logical_dns
      hosts:
        - socket_address:
            address: host.docker.internal
            port_value: 4201
    - name: website-main-backend
      connect_timeout: 0.25s
      type: logical_dns
      hosts:
        - socket_address:
            address: host.docker.internal
            port_value: 4200
    - name: website-admin-frontend
      connect_timeout: 0.25s
      type: logical_dns
      hosts:
        - socket_address:
            address: host.docker.internal
            port_value: 4204
    - name: website-admin-backend
      connect_timeout: 0.25s
      type: logical_dns
      hosts:
        - socket_address:
            address: host.docker.internal
            port_value: 4203
